--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <footer class="footer adaptive-content">
       <button class="footer__button button" type="button" onclick="window['dialog-id'].showModal()">
         <svg class="button-floppy" viewBox="0 0 21 21">
-          <use href="./images/floppy.svg#floppy"> 
+          <use href="./images/floppy.svg#floppy"/> 
         </svg>
         <span class="button__text">
           Сохранить на память
@@ -370,7 +370,7 @@
     </footer>
     <dialog class="dialog" id="dialog-id">
       <svg class="dialog__content-floppy" viewBox="0 0 21 21">
-        <use href="./images/floppy.svg#floppy">
+        <use href="./images/floppy.svg#floppy"/>
       </svg>
       <span class="dialog__content-text">
         Вставьте дискету, чтобы продолжить
