--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </head>
   <body class="page">
     <header class="header adaptive-content">
-      <span class="header__logo">
-        &lt;/HTML&gt;
-      </span>
+      <a class="header__logo" aria-hidden="true">
+        &lt;/html&gt;
+      </a>
       <h1 class="header__title">
-        закрывающий тег
+        закрывающий тег
       </h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -58,9 +58,9 @@
           </h2>
           <div class="card__image-container">
             <span class="card__image-label">
-              &lt;excitement-level="200%"&gt;
+              &lt;excitement="200%"&gt;
             </span>
-            <img class="card__image image-road" src="./images/road.jpg" alt="Изображение дороги">
+            <img class="card__image image-road" src="./images/road.jpg" alt="Пейзаж с дорогой, уходящей в горизонт">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -82,7 +82,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -98,7 +98,7 @@
             <span class="card__image-label">
               &lt;doubts="start"&gt;
             </span>
-            <img class="card__image image-robot" src="./images/robot.jpg" alt="Изображение робота с котиками">
+            <img class="card__image image-robot" src="./images/robot.jpg" alt="Робот на лавочке с котиками">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -120,7 +120,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -134,9 +134,9 @@
           </h2>
           <div class="card__image-container">
             <span class="card__image-label">
-              &lt;inspiration="to top"&gt;
+              &lt;inspiration="to top"&gt;
             </span>
-            <img class="card__image image-knight" src="./images/knight.jpg" alt="Изображение рыцаря">
+            <img class="card__image image-knight" src="./images/knight.jpg" alt="Рыцарь, смотрящий на замок">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -158,7 +158,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -172,9 +172,9 @@
           </h2>
           <div class="card__image-container">
             <span class="card__image-label">
-              &lt;hard work="true"&gt;
+              &lt;hard-work="true"&gt;
             </span>
-            <img class="card__image image-cat" src="./images/cat.jpg" alt="Изображение котика за компьютером">
+            <img class="card__image image-cat" src="./images/cat.jpg" alt="Котик за компьютером">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -196,7 +196,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -210,9 +210,9 @@
           </h2>
           <div class="card__image-container">
             <span class="card__image-label">
-              &lt;if (family) {success = true}&gt;
+              &lt;family !important&gt;
             </span>
-            <img class="card__image image-family" src="./images/family.jpg" alt="Изображение отца с ребенком в комнате">
+            <img class="card__image image-family" src="./images/family.jpg" alt="Отец с ребенком в комнате">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -234,7 +234,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -250,7 +250,7 @@
             <span class="card__image-label">
               &lt;knowledge="10%"&gt;
             </span>
-            <img class="card__image image-pc" src="./images/pc.jpg" alt="Изображение рабочего места с комьютерами">
+            <img class="card__image image-pc" src="./images/pc.jpg" alt="Рабочее место с двумя компьютерами">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -272,7 +272,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -288,7 +288,7 @@
             <span class="card__image-label">
               &lt;mood="calm"&gt;
             </span>
-            <img class="card__image image-mood" src="./images/mood.jpg" alt="Изображение человека ночью на балконе">
+            <img class="card__image image-mood" src="./images/mood.jpg" alt="Человек ночью на балконе">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -310,7 +310,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -326,7 +326,7 @@
             <span class="card__image-label">
               &lt;mode="confidence"&gt;
             </span>
-            <img class="card__image image-entrance" src="./images/entrance.jpg" alt="Изображение врат">
+            <img class="card__image image-entrance" src="./images/entrance.jpg" alt="Коридор с вратами в конце">
           </div>
           <div class="card__content">
             <div class="card__text">
@@ -348,7 +348,7 @@
                   <path class="sparks" fill="var(--heart-color)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
                 </svg>
               </button>
-              <button class="card__like-button button">
+              <button class="card__like-button button" type="button">
                 <span class="button__text">
                   Like
                 </span>
@@ -357,17 +357,15 @@
           </div>
         </li>
       </ul>
-    </main>
-    <footer class="footer adaptive-content">
-      <button class="footer__button button" type="button" onclick="window['dialog-id'].showModal()">
-        <svg class="button-floppy" viewBox="0 0 21 21">
+      <button class="save-button button" type="button" onclick="window['dialog-id'].showModal()">
+        <svg class="save-button--floppy" viewBox="0 0 21 21">
           <use href="./images/floppy.svg#floppy"/> 
         </svg>
         <span class="button__text">
           Сохранить на память
         </span>
       </button>
-    </footer>
+    </main>
     <dialog class="dialog" id="dialog-id">
       <svg class="dialog__content-floppy" viewBox="0 0 21 21">
         <use href="./images/floppy.svg#floppy"/>
@@ -375,11 +373,13 @@
       <span class="dialog__content-text">
         Вставьте дискету, чтобы продолжить
       </span>
-      <button class="dialog__button button" type="button" onclick="window['dialog-id'].close()">
-        <span class="button__text">
-          Ок
-        </span>
-      </button>
+      <form class="dialog__form" method="dialog" >
+        <button class="dialog__button button" type="submit">
+          <span class="button__text">
+            Ок
+          </span>
+        </button>
+      </form>
     </dialog>
     <script src="./scripts/like.js"></script>
   </body>
